fix: contrast on portfolio btn text

--- a/new/static/styles.css
+++ b/new/static/styles.css
@@ -18,6 +18,7 @@ img {
 /* Toggle Theme Styles */
 
 :root {
+  --text-dark: #333333; /* charcoal */
   --bg: #fffff0; /* ivory */
   --text: #333333; /* charcoal */
   --button-bg: #b5a642; /* gold */
@@ -194,7 +195,7 @@ body {
 
 .portfolio__link a:hover,
 .navbar__link a:hover {
-  color: var(--button-bg);
+  color: var(--text-visited);
 }
 
 .portfolio__link a:active,
@@ -479,7 +480,7 @@ body {
 .portfolio label:hover,
 .portfolio input[type="radio"]:checked + label {
   background: var(--button-bg);
-  color: var(--text);
+  color: var(--text-dark);
 }
 
 .image-container {
